# Clausr

./: .dockerignore  .gitignore  Blog.md  DEMO_SCRIPT.md  Dockerfile  Dockerfile.save  README.md  REWARD_DESIGN.md  SPEC.md  TRAINING_REPORT.md  add_runners.py  build_constitution_data.py  checks_output.txt  clausr_grpo_training.py  clausr_training.ipynb  clausr_training_colab.ipynb  client.py  inference.py  inference_out.txt  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_checks.sh  test_constitution.py  test_easy.py  train_and_evaluate.py  train_grpo.py
data/contracts/: adversarial_easy_001.json  adversarial_easy_002.json  adversarial_hard_001.json  adversarial_medium_001.json  constitution_easy_001.json  constitution_easy_002.json  constitution_hard_001.json  constitution_hard_002.json  constitution_medium_001.json  constitution_medium_002.json  (+23 more)
frontend/: index.html  package-lock.json  package.json
scratch/: generate_execution_data.py  stress_test.py  test_endpoints.py  test_json.py
scripts/: build_adversarial_data.py  build_data.py  finalize_fixes.py  finish_inference_fixes.py  fix_inference.py  fix_inference_clean.py  generate_plots.py  inference_test.py  keep_alive.sh  manual_test.py  patch_extract.py  patch_inference.py  reapply_fixes.py  run_audit.sh  safe_finalize.py  test_endpoints.sh
server/: adversarial_environment.py  app.py  app.py.save  constitution_environment.py  curriculum_environment.py  environment.py  execution_environment.py  federated_environment.py  fingerprint_engine.py  lexmind_environment.py  timemachine_environment.py
(+44 files in other folders)
