[project]
name = "contractfix"
version = "1.0.0"
description = "ContractFix OpenEnv environment for finding contradictions in business contracts"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
